[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-voiceiq"
version = "0.1.0"
description = "VoiceIQ — Audio Tone Analysis Environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.19.0",
    "groq>=0.9.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "voiceiq.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["voiceiq", "voiceiq.server"]
package-dir = { "voiceiq" = ".", "voiceiq.server" = "server" }